--- a/index.html
+++ b/index.html
@@ -5,22 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>  
   <body>
     <!-- Your content will go here -->
-    
-
-    <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>The Title Of Your Page</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-  </head>  
-  <body>
    <div class="titlebar"></div>
    
     <video width="1263" height="710" controls>
@@ -146,8 +134,5 @@
 
 
   <script src="js/site.js"></script>
-
-  </body>
-</html>
   </body>
 </html>
